--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -15,7 +15,8 @@
 			<div class="right-nav">
 				<ul>
 					<li>
-						<i class="far fa-user"></i>
+						<!-- <i class="far fa-user"></i> -->
+            <img style="width: 50px; margin-right: 10px; border-radius: 50%;" alt="avatar" src="https://avatars.githubusercontent.com/u/55724699?v=4">
 						<button  type="submit" class="nav-content" id="button">LOG OUT</button>
 					</li>
 				</ul>	
@@ -56,17 +57,23 @@
               <hr/>
               <div class="flex-div">
                 <div class="left-div">
-                  <div class="avater">
-                    <img alt="avatar" src="">
-                    <p class="edit-icon">icon</p>
+                  <div  class="avatar">
+                    <!-- <img alt="avatar" src="https://avatars.githubusercontent.com/u/55724699?v=4"> -->
+                    <img alt="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjbzb7pVBgYK7AJEL4G5m-sUykuYsUz3Tysz4uYw5Hlt_o_xkgF0PRLu_VG_xsvn1ZHmk&usqp=CAU">
+                    <div class="edit-icon">
+                      <label style="cursor: pointer;" class="filebutton">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                        <input style="display: none;" type="file" id="myfile" name="myfile">
+                      </label>
+                    </div> 
+                  </div>
+                  <div class="edit-button">
+                    <button>Edit picture</button>
                   </div>
                   <div class="email">
                     <p class="title">Email</p>
                     <p class="body">hilghsilk2damson@gmail.com</p>
-                  </div>
-                  <div class="edit-button">
-                    <button>Edit profile</button>
-                  </div>
+                  </div> 
                 </div>
                 <div class="right-div">
                   <div class="Full-name">
@@ -87,7 +94,22 @@
                   </div>
                 </div>
               </div>
-              
+              <div style="border: 1px solid black;" class="update-profile">
+                <div class="title">
+                  <h3 style="text-align: center;">Update Profile</h3>
+                </div>
+                <div class="update-form">
+                  <form>
+                    <label for="fBio">Bio</label>
+                    <textarea id="fBio" rows="5" cols="50"></textarea><br>
+                    <label for="fCompany">Company name</label>
+                    <input id="fCompany" type="text"><br>
+                    <label for="fLocation">Location</label>
+                    <input id="fLocation" type="text"><br>
+                    <button type="submit">Update</button>
+                  </form>
+                </div>
+              </div>
             </div> 
           </div>  
 				</div>
@@ -141,7 +163,7 @@
 							</form>
 						</div>
 						<div class="image">
-							<img src="circles.png" alt="new Img">
+							<img class="customer-image" src="circles.png" alt="new Img">
 						</div>
 			    </div>
 			  </div>
