updated my file

--- a/ADD-NEW/index.html
+++ b/ADD-NEW/index.html
@@ -109,7 +109,9 @@
                 <!-- <p class="copy-success" >COPIED!</p> -->
               </div>
               <div class="div-3">
+				  
                 <div class="transaction-div">
+					
                   <!-- Transaction table content -->
                 </div>
               </div>
@@ -161,7 +163,7 @@
 										<input type="text" name="name" id="firstName" placeholder="e.g John..." required><br>
 										<label class="last-name">Last Name</label>
 										<input  type="text" name="name" id="lastName" placeholder="Smith..." required><br>
-										<label class="email">Email</label>
+										<label class="email">Your Email</label>
 										<input  type="email" name="email" id="email" placeholder="johnsmith@gmail.com" required><br>
 										<label class="DOB">Date of birth</label>
 										<input  type="date" name="DOB" id="DOB" placeholder="2001-01-12" required><br>
