--- a/SEND-AIRTIME/send.html
+++ b/SEND-AIRTIME/send.html
@@ -31,7 +31,7 @@
          </table>
         </div>
         <div class="button">
-         <button type="button" id="send" style="margin-top:80px" >Send Airtime</button>
+         <button onclick="myFunction()" type="button" id="send" style="margin-top:80px" >Send Airtime</button>
         </div> 
     </div>
 </div>
