--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <ul>
             <li>
               <!-- <a href="index.html" class="nav-content logged-out">Home</a> -->
-              <a href="ADD-NEW/Add.html" class="nav-content logged-in">Add Cutomers</a>
+              <a href="ADD-NEW/index.html" class="nav-content logged-in">Add Cutomers</a>
               
-              <a href="TRANSACTION/Transaction.html" class="nav-content logged-in">Trasactions</a>
+              <a href="TRANSACTION" class="nav-content logged-in">Trasactions</a>
               
               <button type="submit" class="nav-content  logged-out" id="login-button" 
                 data-toggle="modal" data-target="#MyModal" data-backdrop="static">LOG IN</button>
@@ -48,10 +48,10 @@
           <a href="index.html" class="side-content logged-out">Home</a> 
           </p> -->
           <p>
-            <a href="ADD-NEW/Add.html" class="side-content logged-in">Add Customers</a>  
+            <a href="ADD-NEW/index.html" class="side-content logged-in">Add Customers</a>  
           </p>
           <p>
-            <a href="TRANSACTION/Transaction.html" class="side-content  logged-in">Trasactions</a>   	
+            <a href="TRANSACTION/index.html" class="side-content  logged-in">Trasactions</a>   	
           </p> 
           <div>
             <button  type="submit" class="side-content logged-out" id="login-button">LOG IN</button>
