--- a/index.html
+++ b/index.html
@@ -73,7 +73,46 @@
 					<div class="right-content">
 						<img class="image" src="">
 					</div>
-				</div>   
+				</div>  
+        <div class="div-two">
+          <div class = "left-content-img">
+            <img alt = "pictures" src = "">
+          </div>
+          <div class="right-content">
+            <p>
+              Control the amount of airtime you send to your customers by creating and funding a wallet with your desired amount
+            </p>
+          </div>
+        </div>
+        <div class = "div-three">
+           <div class="each-icon">
+            <div class="icon icon-1">
+              <i class="fa fa-bars"></i>
+            </div>
+            <div class="details">
+              <p>Reach many customers and compesate<br> them at once with our service</p>
+            </div>
+
+            <div class="each-icon">
+              <div class="icon icon-2">
+                <i class="fa fa-bars"></i>
+              </div>
+              <div class="details">
+                <p>Reach many customers and compesate<br> them at once with our service</p>
+              </div>
+
+
+              <div class="each-icon">
+                <div class="icon icon-3">
+                  <i class="fa fa-bars"></i>
+                </div>
+                <div class="details">
+                  <p>Reach many customers and compesate<br> them at once with our service</p>
+                </div>
+           </div>
+          
+          
+        </div>
 			</div>
 			<div class="footer">
 				<footer>
